import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

buildscript {
    ext {
        appName = "EdolView"
    }
}

plugins {
    id 'application'
    id 'org.jetbrains.kotlin.jvm'
}

dependencies {
    implementation project(":core")

    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
    implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
}

tasks.withType(KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_16.toString()
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

project.ext.mainClassName = "kr.edoli.edolview.MainKt"
project.ext.appname = appName
project.ext.assetsDir = new File("../assets")
project.ext.version = '1.4.3'

application {
    mainClass = project.mainClassName
    applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
}

run {
    workingDir = project.assetsDir
    args = ["-d"]
    jvmArgs = ["--add-opens", "java.base/java.nio=ALL-UNNAMED"]

    OperatingSystem os = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
    if (os.isLinux()) {
        def existingLdPath = System.getenv("LD_LIBRARY_PATH") ?: ""
        environment "LD_LIBRARY_PATH", "lib:${existingLdPath}"
    }
}

distTar.enabled = false

task installAfter() {
    doLast {
        OperatingSystem os = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
        var rootPath = project.projectDir.absolutePath
        if (os.isWindows()) {
            new File("${rootPath}/build/install/desktop/lib").listFiles().findAll{
                String fn = it.name
                fn.contains("arm") || fn.contains("x86") || fn.contains("linux") || fn.contains("macos")
            }.each{it.delete()}
        }
        else if (os.isLinux()) {
            new File("${rootPath}/build/install/desktop/lib").listFiles().findAll{
                String fn = it.name
                fn.contains("arm") || fn.contains("x86") || fn.contains("windows") || fn.contains("macos")
            }.each{it.delete()}
        }
        else if (os.isMacOsX()) {
            new File("${rootPath}/build/install/desktop/lib").listFiles().findAll{
                String fn = it.name
                fn.contains("arm") || fn.contains("x86") || fn.contains("linux") || fn.contains("windows")
            }.each{it.delete()}
            new File("${rootPath}/build/install/desktop/install").delete()
        }
        exec {
            executable = "${System.properties['java.home']}/bin/jlink"
            args("--module-path")
            args("./build/install/desktop/lib")
            args("--add-modules")
            args("java.base,java.desktop,java.logging,jdk.unsupported")
            args("--no-header-files")
            args("--no-man-pages")
            args("--compress=1")
            args("--output")
            args("${rootPath}/build/install/desktop/jre")
        }
        def configJson = """{
  "classPath": [
${String.join(',\n', new File("${rootPath}/build/install/desktop/lib").list().collect {"    \"lib/${it}\"" })}
  ],
  "mainClass": "${project.mainClassName}",
  "vmArgs": [
    "-Xmx4G",
    "--add-opens=java.base/java.nio=ALL-UNNAMED",
    "--add-opens",
    "java.base/java.nio=ALL-UNNAMED"
  ]
}
    """
        if (os.isLinux()) {
            new File("${rootPath}/build/install/desktop/edolview.json").write(configJson)
        } else {
            new File("${rootPath}/build/install/desktop/config.json").write(configJson)
        }
    }
}

installDist.finalizedBy(installAfter)

startScripts {
    doLast {
        var unixJVMOpts = [
                "-Dfile.encoding=UTF-8",
                "-Xmx4G",
                "--add-opens=java.base/java.nio=ALL-UNNAMED",
                "--add-opens",
                "java.base/java.nio=ALL-UNNAMED"]
        unixScript.text = unixScript.text.replace('APP_HOME=$( cd -P "${APP_HOME:-./}.." > /dev/null && printf \'%s\\n\' "$PWD" ) || exit', '''
APP_HOME=$( cd -P "${APP_HOME:-./}.." > /dev/null && printf '%s\\n' "$PWD" ) || exit

[ "$PWD" != "$APP_HOME" ] && cd "$APP_HOME"

JAVA_HOME=./jre
export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:./lib
''').replace('DEFAULT_JVM_OPTS=\'"-Dfile.encoding=UTF-8"\'', "DEFAULT_JVM_OPTS=\"${unixJVMOpts.join(' ')}\"")
    }
}

distributions {
    main {
        contents {
            from('../assets')
            exclude('test*')
            exclude('*.svg')
            exclude('*.log')
            exclude('build*')
            exclude('edolview.bat')
            exclude('icon.ico')
            exclude('config.json')

            OperatingSystem os = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
            if (os.isWindows()) {
                exclude('lib/')
            }
            if (os.isLinux()) {
                exclude('*.exe')
                exclude('*.dll')
            } else {
                exclude('install.sh')
                exclude('edolview')
            }
        }
    }
}